# er-triage-agent

./: .gitignore  README.md  pyproject.toml
data/processed/: vitals_final.csv
experiments/: 00_data_analysis.ipynb  01_data_preprocessing.ipynb
src/agent/: core_agent.py
src/backend/: main.py
src/frontend/: streamlit_app.py
src/tests/: test_ablation.py  test_with_dataset.py
src/tools/: decision_tool.py  symptom_tool.py  vital_signs_tool.py
